test/expected/declare_ff_v-c.out
declare f as friend function returning void
             ^
14: error: "friend": unsupported keyword in C
